minor misalignment fixes

--- a/src/scss/components.sass
+++ b/src/scss/components.sass
@@ -87,6 +87,7 @@ p + p
 .footer
   @extend %t
   font-size: 18px
+  text-align: center
   color: rgba($black, 0.4)
   text-decoration-line: underline
   text-decoration-skip-ink: all
