--- a/src/scss/pages.sass
+++ b/src/scss/pages.sass
@@ -108,7 +108,7 @@ li
   position: absolute
   inset: 0
   z-index: -1
-  box-shadow: 0 0 120px 50px rgba(0, 0, 0, 0.50) inset
+  //box-shadow: 0 0 120px 50px rgba(0, 0, 0, 0.50) inset
 
 .shadow-overlay
   position: absolute
@@ -117,7 +117,7 @@ li
   box-shadow: 0 0 120px 50px rgba(0, 0, 0, 0.50) inset
 
 #carousel
-  height: 101%
+  height: 102%
   width: 100%
   display: flex
   flex-direction: row
@@ -175,3 +175,6 @@ li
     display: inline-flex
     align-items: center
     justify-content: center
+
+  .shadow-overlay
+    box-shadow: 0 0 30px 15px rgba(0, 0, 0, 0.50) inset
