--- a/src/scss/portfolio.sass
+++ b/src/scss/portfolio.sass
@@ -8,11 +8,11 @@ html, body
 
 body
   background: $black
-  height: 100lvh
+  height: 100svh
   overflow: hidden
 
 main
-  height: 100lvh
+  height: 100svh
   overflow-y: scroll
   scroll-behavior: smooth
 
